updated routes for trainers, added trainer to swagger, added routes to rest
