# routes/index.js
@@ -3,5 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/exercises', require('./exercises'));
+router.use('/trainers', require('./trainers'));
 
 module.exports = router;
